jumping a/b slider handles fixed

--- a/css/main.css
+++ b/css/main.css
@@ -32,19 +32,32 @@ hr.double {
   height: 3px; border: 1px solid #888;
 }
 
-#slider {border-width: 1px;}
+#slider {
+  border-width: 1px;
+  height: 15px;
+}
 
 #slider .ui-slider-handle {
   text-align: center;
-  height: 1em; width: 1em; top: 0px;
+  height: 15px; width: 0em; top: 0px;
   border: 0px;
   padding: 0;
   color: #000000;
+  margin-left: 0;
+  margin-right: 0;
 }
 
-#slider .ui-slider-handle:focus {
-  background-color: #fcc;
+.abhandle {
+  display: flex;
+  justify-content: center;
+  width:16px;
+  height:15px;
 }
+
+/* #slider .ui-slider-handle:focus {
+  background-color: #fcc;
+  background: none;
+} */
 
 #slider .ui-state-default {
   background: none;
@@ -54,7 +67,10 @@ hr.double {
   background-color: #888;
 }
 
-#scrub {border-width: 1px;}
+#scrub {
+  border-width: 1px;
+  height: 6px;
+}
 
 #scrub .ui-slider-range {
   background-color: #F00;
